crates/toml_edit/tests/snapshots/invalid/control/bare-formfeed.stderr
TOML parse error at line 1, column 21
  |
1 | bare-formfeed     = 
  |                     ^
string values must be quoted, expected literal string
